--- a/src/components/PlayTo31Component.module.css
+++ b/src/components/PlayTo31Component.module.css
@@ -3,5 +3,5 @@
  * file, You can obtain one at https://mozilla.org/MPL/2.0/. */
 
 .playTo31Component {
-  display: flex;
+  display: inline-flex;
 }
