--- a/src/components/PlayedCards.module.css
+++ b/src/components/PlayedCards.module.css
@@ -2,10 +2,6 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/. */
 
-.playTo31Component {
-  display: inline-flex;
-  padding-left: 0px;
-  border-style: solid;
-  border-width: 0 thin 0 0;
-  border-color: grey;
+.playedCards > :last-child {
+  border: none;
 }
