Vertically offset pone and dealer plays
Added to ease distinguishing pone and dealer played cards after the
fact.

--- a/src/components/PlayActionComponent.module.css
+++ b/src/components/PlayActionComponent.module.css
@@ -5,3 +5,11 @@
 .playActionComponent {
   cursor: default;
 }
+
+.playedByPone {
+  margin-top: 1.5em;
+}
+
+.playedByDealer {
+  margin-bottom: 1.5em;
+}
