--- a/src/components/PlayTo31Component.module.css
+++ b/src/components/PlayTo31Component.module.css
@@ -7,5 +7,5 @@
   padding-left: 0px;
   border-style: solid;
   border-width: 0 thin 0 0;
-  border-color: grey;
+  border-color: grey; /* TODO: factor out common color */
 }
